implemented startup lock

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,4 @@
-FLAGS= -ansi -Wall -O0 -g3 -lncurses -lm -framework IOKit -framework CoreFoundation
+FLAGS= -ansi -Wall -O3 -lncurses -lm -framework IOKit -framework CoreFoundation
 
 all: client.cpp
 	g++ -o client client.cpp libstem_Gamepad.a $(FLAGS)
