Python visual modlue updates && bug fix

--- a/Python/Makefile
+++ b/Python/Makefile
@@ -1,4 +1,4 @@
-OBJS = ../Vector3D.o ../Sensor.o ../Drivers/I2Cdev.o ../Drivers/MPU6050.o ../Drivers/BMP085.o ../Drivers/PCF8591.o
+OBJS = ../Sensor.o ../Drivers/I2Cdev.o ../Drivers/MPU6050.o ../Drivers/BMP085.o ../Drivers/PCF8591.o
 
 all: Quad.so
 
@@ -7,6 +7,9 @@ Quad.so: wrapper.o $(OBJS)
 
 wrapper.o: wrapper.cpp
 	g++ -c wrapper.cpp -ansi -O3 -I/usr/include/python2.7
+
+Vector3D.o: Vector3D.cpp
+	g++ -c Vector3D.cpp -ansi -O3
 
 $(OBJS): $(OBJS:.o=.cpp)
 	cd .. && make
